test.yaml
# Defines a test to run.  
# The test is deemed to succeed or fail as the exit status
# of the pod is "Succeeded" or "Failed". 
kind: Pod
apiVersion: v1
metadata:
  name: test-${DEPLOYMENT}
spec:
  restartPolicy: Never
  containers:
  - name: endtoend
    image: gcr.io/${PROJECT_NAME}/test:1.0
