canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-service
  labels:
    stack: canary
spec:
  ports:
  - port: 81
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    # selector must be of the form "service_NAME: 'true'", 
    #   where NAME is the name of this service.
    service_service: 'true'
    stack: canary
  type: NodePort
